--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
-.root{
+/*.root{
 	background-color:rgb(135, 206, 235);
 }
 .first-child{
@@ -36,4 +36,39 @@
 	padding:10px;
 	font-size:22px;
 	background-color:pink;
-}
+}*/
+       :root {
+            background-color: rgb(135, 206, 235);
+        }
+
+        article p:first-child {
+            background-color: black;
+            color: white;
+        }
+
+        article p:nth-child(2) {
+            color: initial; /* Standard text color */
+        }
+
+        article p:last-child {
+            color: red;
+        }
+
+        ul li {
+            background-color: gray;
+            width: 50%;
+            padding: 10px;
+        }
+
+        ul li:nth-child(odd) {
+            background-color: white;
+        }
+
+        ul li:first-child,
+        ul li:last-child {
+            font-size: 22px;
+        }
+
+        ul li:nth-last-child(3) {
+            background-color: pink;
+        }
